[package]
name = "paulxdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref       = "0.3.6"
solana-program = "1.8.9"
thiserror      = "1.0.30"
spl-token      = {version="3.2.0", features = ["no-entrypoint"]}
